--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             var pointsOrigin = [];
             var i;
             var dr = mobile ? 0.3 : 0.1;
-            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 210, 13, 0, 0));
-            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 150, 9, 0, 0));
-            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 90, 5, 0, 0));
+            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 100, 6, 0, 0)); // Thay đổi kích thước ở đây
+            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 60, 4, 0, 0)); // Thay đổi kích thước ở đây
+            for (i = 0; i < Math.PI * 2; i += dr) pointsOrigin.push(scaleAndTranslate(heartPosition(i), 40, 2, 0, 0)); // Thay đổi kích thước ở đây
             var heartPointsCount = pointsOrigin.length;
 
             var targetPoints = [];
@@ -204,3 +204,4 @@
     </script>
 </body>
 </html>
+
